2008-04-10  Vincent Untz  <vuntz@gnome.org>

	* clock.glade: be a bit more reasonable with the height :-)

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	* clock.glade: change again the default size of the find location
	window. It seems it was lost with the GtkDialog migration.

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	* clock.glade: do not make the edit location window resizable

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	* clock.c: (run_find_location): pre-fill the find location entry if it
	was empty and the user typed something in the name entry of the
	previous dialog
	(edit_clear): also collapse the find location treeview when resetting
	the state of the find window

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	* clock.c: (find_timezone), (update_timezone): don't uselessly copy a
	string

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	* clock-zonetable.c: (clock_zonetable_load_zonetab),
	(clock_zonetable_load_iso3166): do not assume the timezone and country
	data files exist, so don't crash when they're not present. We still
	need to define a proper behavior when we don't have timezone data,
	though.
	Fix bug #527309.

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	* clock.c: (edit_clear): when clearing the "edit location" window, also
	clear the "find location" window, so that next time it gets opened,
	there's no weird pre-filled text
	* clock.glade: name the scrolled window in the find location window

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	* clock-country.c:
	* clock-location-tile.c:
	* clock-location.c:
	* clock-zoneinfo.c: don't use libgnome/gnome-i18n.h, but glib/gi18n.h

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	* clock-map.c: (clock_map_init): init some fields
	(clock_map_refresh): be a bit more clever about what we do. Do nothing
	if we have no space allocated. Only reload the map if the allocation
	changed.
	(clock_map_expose): add a warning for a case that should never happen