@@ -1,5 +1,9 @@
 2008-04-10  Vincent Untz  <vuntz@gnome.org>
 
+	* clock.c: (zone_combo_changed): add FIXME
+
+2008-04-10  Vincent Untz  <vuntz@gnome.org>
+
 	* clock.glade: be a bit more reasonable with the height :-)
 
 2008-04-10  Vincent Untz  <vuntz@gnome.org>
